--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: AppCore
+name: appcore
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_custom_tabs: ^2.1.0
   url_launcher: ^6.3.0
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
