--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_custom_tabs: ^2.1.0
   url_launcher: ^6.3.0
+  share_plus: ^9.0.0
+  file_picker: ^8.0.6
 
 
 
