--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -37,6 +37,8 @@ dependencies:
   url_launcher: ^6.3.0
   share_plus: ^9.0.0
   file_picker: ^8.0.6
+  receive_sharing_intent: ^1.8.0
+  path_provider: ^2.1.3
 
 
 
