--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: appcore
-description: "A new Flutter project."
+description: "Everything App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+8
+version: 1.0.0+10
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -39,6 +39,8 @@ dependencies:
   file_picker: ^8.0.6
   receive_sharing_intent: ^1.8.0
   path_provider: ^2.1.3
+  share_handler: ^0.0.21
+  fluttertoast: ^8.2.6
 
 
 
